feat: Add setup cells to notebooks for remote execution
Each notebook now has a setup cell at the top that:
- Clones or pulls the latest code from GitHub
- Installs the package in editable mode
- Changes to the repo directory

This enables the workflow of developing locally and running
on a remote H100 by just re-running the first cell.

--- a/notebooks/01_training.ipynb
+++ b/notebooks/01_training.ipynb
@@ -1,18 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "source": [
+    "# Setup: Pull latest code and install package\n",
+    "# Run this cell first to ensure you have the latest version\n",
+    "\n",
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "REPO_URL = \"https://github.com/JackHopkins/FormationHNCA.git\"\n",
+    "REPO_DIR = \"/workspace/FormationHNCA\"  # Colab/remote path\n",
+    "\n",
+    "# Clone or pull latest\n",
+    "if os.path.exists(REPO_DIR):\n",
+    "    print(\"Pulling latest changes...\")\n",
+    "    os.chdir(REPO_DIR)\n",
+    "    subprocess.run([\"git\", \"pull\"], check=True)\n",
+    "else:\n",
+    "    print(\"Cloning repository...\")\n",
+    "    subprocess.run([\"git\", \"clone\", REPO_URL, REPO_DIR], check=True)\n",
+    "    os.chdir(REPO_DIR)\n",
+    "\n",
+    "# Install package\n",
+    "print(\"Installing package...\")\n",
+    "subprocess.run([\"pip\", \"install\", \"-q\", \"-e\", \".\"], check=True)\n",
+    "\n",
+    "print(f\"Working directory: {os.getcwd()}\")\n",
+    "print(\"Setup complete!\")"
+   ],
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Battle NCA Training\n",
-    "\n",
-    "This notebook implements the three-phase curriculum for training Hierarchical Neural Cellular Automata for battle simulation.\n",
-    "\n",
-    "**Training Phases:**\n",
-    "1. **Phase 1**: Static formation learning (1,500 iterations)\n",
-    "2. **Phase 2**: Multi-formation transitions (2,500 iterations)\n",
-    "3. **Phase 3**: Combat dynamics (4,000 iterations)"
-   ]
+   "source": "# Core imports\nimport sys\nsys.path.insert(0, 'src')\n\nimport jax\nimport jax.numpy as jnp\nfrom flax import linen as nn\nfrom flax.training import train_state\nimport optax\nimport matplotlib.pyplot as plt\nimport numpy as np\nfrom functools import partial\nimport time\n\n# Battle NCA imports\nfrom battle_nca.core import NCA, perceive\nfrom battle_nca.core.nca import create_seed\nfrom battle_nca.hierarchy import ChildNCA, ParentNCA, HierarchicalNCA\nfrom battle_nca.hierarchy.child_nca import create_army_seed, CHILD_CHANNELS\nfrom battle_nca.combat import FormationTargets, create_formation_target\nfrom battle_nca.combat.formations import FormationTypes\nfrom battle_nca.combat.losses import formation_loss, total_battle_loss\nfrom battle_nca.training import NCAPool, Trainer, TrainingConfig\nfrom battle_nca.training.optimizers import create_optimizer, normalize_gradients\nfrom battle_nca.utils.visualization import render_state, plot_training_curves\n\nprint(f\"JAX devices: {jax.devices()}\")\nprint(f\"JAX version: {jax.__version__}\")"
   },
   {
    "cell_type": "code",
@@ -444,9 +468,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Save Trained Model"
-   ]
+   "source": "# Save model checkpoint\nimport pickle\nfrom pathlib import Path\n\ncheckpoint_dir = Path('checkpoints')\ncheckpoint_dir.mkdir(exist_ok=True)\n\ncheckpoint = {\n    'params': state.params,\n    'config': {\n        'grid_size': GRID_SIZE,\n        'num_channels': NUM_CHANNELS,\n        'hidden_dim': 128,\n    },\n    'metrics': {\n        'phase1_losses': phase1_losses,\n        'phase2_losses': phase2_losses,\n    }\n}\n\nwith open(checkpoint_dir / 'battle_nca_trained.pkl', 'wb') as f:\n    pickle.dump(checkpoint, f)\n\nprint(f\"Model saved to {checkpoint_dir / 'battle_nca_trained.pkl'}\")"
   },
   {
    "cell_type": "code",
