--- a/notebooks/01_training.ipynb
+++ b/notebooks/01_training.ipynb
@@ -2,41 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Setup: Pull latest code and install package\n",
-    "# Run this cell first to ensure you have the latest version\n",
+    "# Setup: Pull latest code and install package with CUDA support\n",
+    "# Run this cell first. If imports fail, restart kernel and run again.\n",
     "\n",
     "import subprocess\n",
+    "import sys\n",
     "import os\n",
     "\n",
     "REPO_URL = \"https://github.com/JackHopkins/FormationHNCA.git\"\n",
-    "REPO_DIR = \"/workspace/FormationHNCA\"  # Colab/remote path\n",
+    "\n",
+    "# Detect environment and set repo path\n",
+    "if os.path.exists(\"/content\"):  # Google Colab\n",
+    "    REPO_DIR = \"/content/FormationHNCA\"\n",
+    "elif os.path.exists(\"/workspace\"):  # Lambda Labs / similar\n",
+    "    REPO_DIR = \"/workspace/FormationHNCA\"\n",
+    "else:\n",
+    "    REPO_DIR = os.path.expanduser(\"~/FormationHNCA\")\n",
     "\n",
     "# Clone or pull latest\n",
     "if os.path.exists(REPO_DIR):\n",
-    "    print(\"Pulling latest changes...\")\n",
-    "    os.chdir(REPO_DIR)\n",
-    "    subprocess.run([\"git\", \"pull\"], check=True)\n",
+    "    print(f\"Pulling latest changes in {REPO_DIR}...\")\n",
+    "    result = subprocess.run([\"git\", \"-C\", REPO_DIR, \"pull\"], capture_output=True, text=True)\n",
+    "    print(result.stdout or \"Already up to date.\")\n",
     "else:\n",
-    "    print(\"Cloning repository...\")\n",
+    "    print(f\"Cloning repository to {REPO_DIR}...\")\n",
     "    subprocess.run([\"git\", \"clone\", REPO_URL, REPO_DIR], check=True)\n",
-    "    os.chdir(REPO_DIR)\n",
+    "\n",
+    "os.chdir(REPO_DIR)\n",
+    "\n",
+    "# Install JAX with CUDA support (for H100/GPU)\n",
+    "print(\"Installing JAX with CUDA support...\")\n",
+    "subprocess.run([\n",
+    "    sys.executable, \"-m\", \"pip\", \"install\", \"-q\",\n",
+    "    \"jax[cuda12]\"\n",
+    "], check=True)\n",
     "\n",
     "# Install package\n",
-    "print(\"Installing package...\")\n",
-    "subprocess.run([\"pip\", \"install\", \"-q\", \"-e\", \".\"], check=True)\n",
+    "print(\"Installing battle-nca package...\")\n",
+    "subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"-e\", \".\"], check=True)\n",
     "\n",
-    "print(f\"Working directory: {os.getcwd()}\")\n",
+    "# Add src to path as fallback\n",
+    "src_path = os.path.join(REPO_DIR, \"src\")\n",
+    "if src_path not in sys.path:\n",
+    "    sys.path.insert(0, src_path)\n",
+    "\n",
+    "print(f\"\\nWorking directory: {os.getcwd()}\")\n",
     "print(\"Setup complete!\")"
-   ],
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": "# Core imports\nimport sys\nsys.path.insert(0, 'src')\n\nimport jax\nimport jax.numpy as jnp\nfrom flax import linen as nn\nfrom flax.training import train_state\nimport optax\nimport matplotlib.pyplot as plt\nimport numpy as np\nfrom functools import partial\nimport time\n\n# Battle NCA imports\nfrom battle_nca.core import NCA, perceive\nfrom battle_nca.core.nca import create_seed\nfrom battle_nca.hierarchy import ChildNCA, ParentNCA, HierarchicalNCA\nfrom battle_nca.hierarchy.child_nca import create_army_seed, CHILD_CHANNELS\nfrom battle_nca.combat import FormationTargets, create_formation_target\nfrom battle_nca.combat.formations import FormationTypes\nfrom battle_nca.combat.losses import formation_loss, total_battle_loss\nfrom battle_nca.training import NCAPool, Trainer, TrainingConfig\nfrom battle_nca.training.optimizers import create_optimizer, normalize_gradients\nfrom battle_nca.utils.visualization import render_state, plot_training_curves\n\nprint(f\"JAX devices: {jax.devices()}\")\nprint(f\"JAX version: {jax.__version__}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -44,10 +60,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add src to path\n",
-    "import sys\n",
-    "sys.path.insert(0, '../src')\n",
+    "# Verify JAX GPU setup\n",
+    "import jax\n",
+    "print(f\"JAX version: {jax.__version__}\")\n",
+    "print(f\"JAX devices: {jax.devices()}\")\n",
     "\n",
+    "if jax.devices()[0].platform == 'gpu':\n",
+    "    print(\"GPU acceleration enabled!\")\n",
+    "else:\n",
+    "    print(\"WARNING: Running on CPU. Restart kernel if you just installed CUDA JAX.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Battle NCA Training\n",
+    "\n",
+    "This notebook implements the three-phase curriculum for training Hierarchical Neural Cellular Automata for battle simulation.\n",
+    "\n",
+    "**Training Phases:**\n",
+    "1. **Phase 1**: Static formation learning (1,500 iterations)\n",
+    "2. **Phase 2**: Multi-formation transitions (2,500 iterations)\n",
+    "3. **Phase 3**: Combat dynamics (4,000 iterations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Core imports\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -71,8 +114,7 @@
     "from battle_nca.training.optimizers import create_optimizer, normalize_gradients\n",
     "from battle_nca.utils.visualization import render_state, plot_training_curves\n",
     "\n",
-    "print(f\"JAX devices: {jax.devices()}\")\n",
-    "print(f\"JAX version: {jax.__version__}\")"
+    "print(\"All imports successful!\")"
    ]
   },
   {
@@ -468,7 +510,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "# Save model checkpoint\nimport pickle\nfrom pathlib import Path\n\ncheckpoint_dir = Path('checkpoints')\ncheckpoint_dir.mkdir(exist_ok=True)\n\ncheckpoint = {\n    'params': state.params,\n    'config': {\n        'grid_size': GRID_SIZE,\n        'num_channels': NUM_CHANNELS,\n        'hidden_dim': 128,\n    },\n    'metrics': {\n        'phase1_losses': phase1_losses,\n        'phase2_losses': phase2_losses,\n    }\n}\n\nwith open(checkpoint_dir / 'battle_nca_trained.pkl', 'wb') as f:\n    pickle.dump(checkpoint, f)\n\nprint(f\"Model saved to {checkpoint_dir / 'battle_nca_trained.pkl'}\")"
+   "source": [
+    "## Save Trained Model"
+   ]
   },
   {
    "cell_type": "code",
@@ -480,7 +524,7 @@
     "import pickle\n",
     "from pathlib import Path\n",
     "\n",
-    "checkpoint_dir = Path('../checkpoints')\n",
+    "checkpoint_dir = Path('checkpoints')\n",
     "checkpoint_dir.mkdir(exist_ok=True)\n",
     "\n",
     "checkpoint = {\n",
