--- a/notebooks/01_training.ipynb
+++ b/notebooks/01_training.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T16:26:28.916556Z",
+     "start_time": "2026-01-18T16:26:24.396291Z"
+    }
+   },
    "source": [
     "# Setup: Pull latest code and install package with CUDA support\n",
     "# Run this cell first. If imports fail, restart kernel and run again.\n",
@@ -52,13 +55,33 @@
     "\n",
     "print(f\"\\nWorking directory: {os.getcwd()}\")\n",
     "print(\"Setup complete!\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pulling latest changes in /workspace/FormationHNCA...\n",
+      "Already up to date.\n",
+      "\n",
+      "Installing JAX with CUDA support...\n",
+      "Installing battle-nca package...\n",
+      "\n",
+      "Working directory: /workspace/FormationHNCA\n",
+      "Setup complete!\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T16:25:34.626578Z",
+     "start_time": "2026-01-18T16:25:34.621378Z"
+    }
+   },
    "source": [
     "# Verify JAX GPU setup\n",
     "import jax\n",
@@ -69,7 +92,19 @@
     "    print(\"GPU acceleration enabled!\")\n",
     "else:\n",
     "    print(\"WARNING: Running on CPU. Restart kernel if you just installed CUDA JAX.\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JAX version: 0.8.2\n",
+      "JAX devices: [CpuDevice(id=0)]\n",
+      "WARNING: Running on CPU. Restart kernel if you just installed CUDA JAX.\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -87,9 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T16:25:34.754753Z",
+     "start_time": "2026-01-18T16:25:34.747684Z"
+    }
+   },
    "source": [
     "# Core imports\n",
     "import jax\n",
@@ -115,7 +153,17 @@
     "from battle_nca.utils.visualization import render_state, plot_training_curves\n",
     "\n",
     "print(\"All imports successful!\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All imports successful!\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -126,9 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T16:25:34.875510Z",
+     "start_time": "2026-01-18T16:25:34.870489Z"
+    }
+   },
    "source": [
     "# Grid configuration\n",
     "GRID_SIZE = 64  # 64x64 grid (can scale to 200x200 for full simulation)\n",
@@ -155,7 +206,9 @@
     "\n",
     "# Random seed\n",
     "SEED = 42"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -166,9 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T16:25:35.023287Z",
+     "start_time": "2026-01-18T16:25:34.999078Z"
+    }
+   },
    "source": [
     "# Create child NCA model\n",
     "child_nca = ChildNCA(\n",
@@ -190,13 +246,27 @@
     "\n",
     "print(f\"Seed shape: {seed.shape}\")\n",
     "print(f\"Seed active cells: {jnp.sum(seed[..., 3] > 0.5)}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seed shape: (64, 64, 24)\n",
+      "Seed active cells: 16\n"
+     ]
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T16:25:35.295281Z",
+     "start_time": "2026-01-18T16:25:35.142997Z"
+    }
+   },
    "source": [
     "# Initialize model parameters\n",
     "key = jax.random.PRNGKey(SEED)\n",
@@ -210,7 +280,29 @@
     "    return sum(p.size for p in jax.tree_util.tree_leaves(params))\n",
     "\n",
     "print(f\"Total parameters: {count_params(params):,}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "conv_general_dilated lhs feature dimension size divided by feature_group_count must equal the rhs input feature dimension size, but 24 // 24 != 24.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[18]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      2\u001B[39m key = jax.random.PRNGKey(SEED)\n\u001B[32m      3\u001B[39m key, init_key = jax.random.split(key)\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m variables = \u001B[43mchild_nca\u001B[49m\u001B[43m.\u001B[49m\u001B[43minit\u001B[49m\u001B[43m(\u001B[49m\u001B[43minit_key\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mseed\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mjax\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrandom\u001B[49m\u001B[43m.\u001B[49m\u001B[43mPRNGKey\u001B[49m\u001B[43m(\u001B[49m\u001B[32;43m0\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m      6\u001B[39m params = variables[\u001B[33m'\u001B[39m\u001B[33mparams\u001B[39m\u001B[33m'\u001B[39m]\n\u001B[32m      8\u001B[39m \u001B[38;5;66;03m# Count parameters\u001B[39;00m\n",
+      "    \u001B[31m[... skipping hidden 9 frame]\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/workspace/FormationHNCA/src/battle_nca/hierarchy/child_nca.py:253\u001B[39m, in \u001B[36mChildNCA.__call__\u001B[39m\u001B[34m(self, state, key, parent_signal, enemy_state)\u001B[39m\n\u001B[32m    241\u001B[39m \u001B[38;5;250m\u001B[39m\u001B[33;03m\"\"\"Execute one child-NCA step.\u001B[39;00m\n\u001B[32m    242\u001B[39m \n\u001B[32m    243\u001B[39m \u001B[33;03mArgs:\u001B[39;00m\n\u001B[32m   (...)\u001B[39m\u001B[32m    250\u001B[39m \u001B[33;03m    Updated state\u001B[39;00m\n\u001B[32m    251\u001B[39m \u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m    252\u001B[39m \u001B[38;5;66;03m# Compute multi-scale perception\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m253\u001B[39m perceptions = \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mmulti_perceive\u001B[49m\u001B[43m(\u001B[49m\u001B[43mstate\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    255\u001B[39m \u001B[38;5;66;03m# Update enemy proximity if enemy state provided\u001B[39;00m\n\u001B[32m    256\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m enemy_state \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n",
+      "    \u001B[31m[... skipping hidden 2 frame]\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/workspace/FormationHNCA/src/battle_nca/core/perceive.py:174\u001B[39m, in \u001B[36mMultiScalePerceive.__call__\u001B[39m\u001B[34m(self, state)\u001B[39m\n\u001B[32m    171\u001B[39m     state = state[\u001B[38;5;28;01mNone\u001B[39;00m]\n\u001B[32m    173\u001B[39m \u001B[38;5;66;03m# Standard Sobel perception for melee (3x3)\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m174\u001B[39m melee_perception = \u001B[43mperceive\u001B[49m\u001B[43m(\u001B[49m\u001B[43mstate\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43muse_circular_padding\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    176\u001B[39m \u001B[38;5;66;03m# Morale perception (7x7 Gaussian smoothing)\u001B[39;00m\n\u001B[32m    177\u001B[39m morale_kernel = \u001B[38;5;28mself\u001B[39m._create_gaussian_kernel(\u001B[32m7\u001B[39m, \u001B[32m2.0\u001B[39m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/workspace/FormationHNCA/src/battle_nca/core/perceive.py:93\u001B[39m, in \u001B[36mperceive\u001B[39m\u001B[34m(state, use_circular_padding)\u001B[39m\n\u001B[32m     90\u001B[39m sobel_x, sobel_y = _create_sobel_kernels()\n\u001B[32m     91\u001B[39m channels = state.shape[-\u001B[32m1\u001B[39m]\n\u001B[32m---> \u001B[39m\u001B[32m93\u001B[39m grad_x = \u001B[43mdepthwise_conv\u001B[49m\u001B[43m(\u001B[49m\u001B[43mstate\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msobel_x\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mchannels\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43muse_circular_padding\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     94\u001B[39m grad_y = depthwise_conv(state, sobel_y, channels, use_circular_padding)\n\u001B[32m     96\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m jnp.concatenate([state, grad_x, grad_y], axis=-\u001B[32m1\u001B[39m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/workspace/FormationHNCA/src/battle_nca/core/perceive.py:61\u001B[39m, in \u001B[36mdepthwise_conv\u001B[39m\u001B[34m(inputs, kernel, channels, use_circular_padding)\u001B[39m\n\u001B[32m     58\u001B[39m kernel_expanded = kernel[:, :, \u001B[38;5;28;01mNone\u001B[39;00m, \u001B[38;5;28;01mNone\u001B[39;00m]\n\u001B[32m     59\u001B[39m kernel_tiled = jnp.tile(kernel_expanded, (\u001B[32m1\u001B[39m, \u001B[32m1\u001B[39m, channels, \u001B[32m1\u001B[39m))\n\u001B[32m---> \u001B[39m\u001B[32m61\u001B[39m result = \u001B[43mjax\u001B[49m\u001B[43m.\u001B[49m\u001B[43mlax\u001B[49m\u001B[43m.\u001B[49m\u001B[43mconv_general_dilated\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m     62\u001B[39m \u001B[43m    \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     63\u001B[39m \u001B[43m    \u001B[49m\u001B[43mkernel_tiled\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     64\u001B[39m \u001B[43m    \u001B[49m\u001B[43m(\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     65\u001B[39m \u001B[43m    \u001B[49m\u001B[43mpadding\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     66\u001B[39m \u001B[43m    \u001B[49m\u001B[43mdimension_numbers\u001B[49m\u001B[43m=\u001B[49m\u001B[43m(\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mNHWC\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mHWIO\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mNHWC\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     67\u001B[39m \u001B[43m    \u001B[49m\u001B[43mfeature_group_count\u001B[49m\u001B[43m=\u001B[49m\u001B[43mchannels\u001B[49m\n\u001B[32m     68\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     70\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m has_batch:\n\u001B[32m     71\u001B[39m     result = result[\u001B[32m0\u001B[39m]\n",
+      "    \u001B[31m[... skipping hidden 30 frame]\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m/usr/local/lib/python3.12/dist-packages/jax/_src/lax/convolution.py:401\u001B[39m, in \u001B[36m_conv_general_dilated_shape_rule\u001B[39m\u001B[34m(lhs, rhs, window_strides, padding, lhs_dilation, rhs_dilation, dimension_numbers, feature_group_count, batch_group_count, **unused_kwargs)\u001B[39m\n\u001B[32m    397\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m core.definitely_equal(quot, rhs.shape[dimension_numbers.rhs_spec[\u001B[32m1\u001B[39m]]):\n\u001B[32m    398\u001B[39m   msg = (\u001B[33m\"\u001B[39m\u001B[33mconv_general_dilated lhs feature dimension size divided by \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    399\u001B[39m          \u001B[33m\"\u001B[39m\u001B[33mfeature_group_count must equal the rhs input feature dimension \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    400\u001B[39m          \u001B[33m\"\u001B[39m\u001B[33msize, but \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[33m // \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[33m != \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[33m.\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m--> \u001B[39m\u001B[32m401\u001B[39m   \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(msg.format(lhs_feature_count, feature_group_count,\n\u001B[32m    402\u001B[39m                               rhs.shape[dimension_numbers.rhs_spec[\u001B[32m1\u001B[39m]]))\n\u001B[32m    403\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m rhs.shape[dimension_numbers.rhs_spec[\u001B[32m0\u001B[39m]] % feature_group_count:\n\u001B[32m    404\u001B[39m   msg = (\u001B[33m\"\u001B[39m\u001B[33mconv_general_dilated rhs output feature dimension size must be a \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    405\u001B[39m          \u001B[33m\"\u001B[39m\u001B[33mmultiple of feature_group_count, but \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[33m is not a multiple of \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[33m.\u001B[39m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mValueError\u001B[39m: conv_general_dilated lhs feature dimension size divided by feature_group_count must equal the rhs input feature dimension size, but 24 // 24 != 24."
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
    "cell_type": "code",
