feat: Add early stopping to training loops
- Stop on NaN/inf loss and restore best parameters
- Stop after PATIENCE epochs without improvement
- Track and restore best parameters throughout training

--- a/notebooks/01_training.ipynb
+++ b/notebooks/01_training.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:36:51.993324Z",
-     "start_time": "2026-01-18T16:36:47.315823Z"
+     "end_time": "2026-01-18T16:42:46.807539Z",
+     "start_time": "2026-01-18T16:42:41.577465Z"
     }
    },
    "source": [
@@ -62,7 +62,12 @@
      "output_type": "stream",
      "text": [
       "Pulling latest changes in /workspace/FormationHNCA...\n",
-      "Already up to date.\n",
+      "Updating 2b02a10..4a541dd\n",
+      "Fast-forward\n",
+      " notebooks/01_training.ipynb           | 164 ++++++++++++++++++++++------------\n",
+      " src/battle_nca/hierarchy/child_nca.py |   8 ++\n",
+      " src/battle_nca/training/optimizers.py |   5 +-\n",
+      " 3 files changed, 121 insertions(+), 56 deletions(-)\n",
       "\n",
       "Installing JAX with CUDA support...\n",
       "Installing battle-nca package...\n",
@@ -78,8 +83,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:36:53.400483Z",
-     "start_time": "2026-01-18T16:36:52.362107Z"
+     "end_time": "2026-01-18T16:42:47.929231Z",
+     "start_time": "2026-01-18T16:42:46.908540Z"
     }
    },
    "source": [
@@ -124,8 +129,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:36:54.527885Z",
-     "start_time": "2026-01-18T16:36:53.912163Z"
+     "end_time": "2026-01-18T16:42:48.919755Z",
+     "start_time": "2026-01-18T16:42:48.333625Z"
     }
    },
    "source": [
@@ -176,8 +181,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:36:54.888976Z",
-     "start_time": "2026-01-18T16:36:54.884305Z"
+     "end_time": "2026-01-18T16:42:49.238122Z",
+     "start_time": "2026-01-18T16:42:49.233696Z"
     }
    },
    "source": [
@@ -221,8 +226,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:36:56.868157Z",
-     "start_time": "2026-01-18T16:36:54.975705Z"
+     "end_time": "2026-01-18T16:42:51.309289Z",
+     "start_time": "2026-01-18T16:42:49.394724Z"
     }
    },
    "source": [
@@ -263,8 +268,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:37:06.539912Z",
-     "start_time": "2026-01-18T16:36:57.139647Z"
+     "end_time": "2026-01-18T16:43:01.416304Z",
+     "start_time": "2026-01-18T16:42:51.630425Z"
     }
    },
    "source": [
@@ -296,8 +301,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:37:07.138356Z",
-     "start_time": "2026-01-18T16:37:06.755277Z"
+     "end_time": "2026-01-18T16:43:01.971823Z",
+     "start_time": "2026-01-18T16:43:01.647983Z"
     }
    },
    "source": [
@@ -350,8 +355,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:37:15.214033Z",
-     "start_time": "2026-01-18T16:37:07.239838Z"
+     "end_time": "2026-01-18T16:43:10.259378Z",
+     "start_time": "2026-01-18T16:43:02.185286Z"
     }
    },
    "source": [
@@ -403,8 +408,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:37:15.823599Z",
-     "start_time": "2026-01-18T16:37:15.444003Z"
+     "end_time": "2026-01-18T16:43:10.885597Z",
+     "start_time": "2026-01-18T16:43:10.607708Z"
     }
    },
    "source": [
@@ -434,8 +439,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-18T16:37:15.950988Z",
-     "start_time": "2026-01-18T16:37:15.947142Z"
+     "end_time": "2026-01-18T16:43:10.981006Z",
+     "start_time": "2026-01-18T16:43:10.975852Z"
     }
    },
    "source": [
@@ -469,63 +474,11 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2026-01-18T16:37:16.041310Z"
+     "start_time": "2026-01-18T16:43:11.098807Z"
     }
    },
-   "source": [
-    "# Phase 1 training loop\n",
-    "print(\"=\"*60)\n",
-    "print(\"PHASE 1: Static Formation Learning\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "phase1_losses = []\n",
-    "phase1_times = []\n",
-    "\n",
-    "for epoch in range(PHASE1_EPOCHS):\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    key, subkey1, subkey2, subkey3 = jax.random.split(key, 4)\n",
-    "    \n",
-    "    # Sample from pool\n",
-    "    indices, batch = pool.sample(config.batch_size, subkey1)\n",
-    "    \n",
-    "    # Apply damage after warmup\n",
-    "    if epoch > config.damage_start_epoch:\n",
-    "        batch = pool.apply_damage(batch, config.damage_samples, subkey2)\n",
-    "    \n",
-    "    # Random step count [64, 96]\n",
-    "    num_steps = int(jax.random.randint(subkey3, (), config.min_steps, config.max_steps + 1))\n",
-    "    \n",
-    "    # Train step\n",
-    "    state, loss, outputs = train_step(state, batch, target, subkey3, num_steps)\n",
-    "    \n",
-    "    # Compute per-sample losses for pool update\n",
-    "    per_sample_losses = jnp.mean((outputs[..., :4] - target) ** 2, axis=(1, 2, 3))\n",
-    "    \n",
-    "    # Update pool\n",
-    "    pool.update(indices, outputs, per_sample_losses)\n",
-    "    \n",
-    "    elapsed = time.time() - start_time\n",
-    "    phase1_losses.append(float(loss))\n",
-    "    phase1_times.append(elapsed)\n",
-    "    \n",
-    "    if epoch % config.log_interval == 0:\n",
-    "        print(f\"Epoch {epoch:4d}: loss = {loss:.6f}, time = {elapsed:.3f}s\")\n",
-    "\n",
-    "print(f\"\\nPhase 1 complete. Final loss: {phase1_losses[-1]:.6f}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "============================================================\n",
-      "PHASE 1: Static Formation Learning\n",
-      "============================================================\n",
-      "Epoch    0: loss = 0.029229, time = 15.082s\n"
-     ]
-    }
-   ],
+   "source": "# Phase 1 training loop with early stopping\nprint(\"=\"*60)\nprint(\"PHASE 1: Static Formation Learning\")\nprint(\"=\"*60)\n\n# Early stopping config\nPATIENCE = 200  # Stop if no improvement for this many epochs\nMIN_DELTA = 1e-6  # Minimum improvement to count as progress\n\nphase1_losses = []\nphase1_times = []\nbest_loss = float('inf')\nbest_params = None\nepochs_without_improvement = 0\n\nfor epoch in range(PHASE1_EPOCHS):\n    start_time = time.time()\n    \n    key, subkey1, subkey2, subkey3 = jax.random.split(key, 4)\n    \n    # Sample from pool\n    indices, batch = pool.sample(config.batch_size, subkey1)\n    \n    # Apply damage after warmup\n    if epoch > config.damage_start_epoch:\n        batch = pool.apply_damage(batch, config.damage_samples, subkey2)\n    \n    # Random step count [64, 96]\n    num_steps = int(jax.random.randint(subkey3, (), config.min_steps, config.max_steps + 1))\n    \n    # Train step\n    state, loss, outputs = train_step(state, batch, target, subkey3, num_steps)\n    loss_val = float(loss)\n    \n    # Early stopping: check for NaN\n    if np.isnan(loss_val) or np.isinf(loss_val):\n        print(f\"\\nEarly stopping at epoch {epoch}: loss is {loss_val}\")\n        if best_params is not None:\n            print(\"Restoring best parameters...\")\n            state = state.replace(params=best_params)\n        break\n    \n    # Track best loss\n    if loss_val < best_loss - MIN_DELTA:\n        best_loss = loss_val\n        best_params = state.params\n        epochs_without_improvement = 0\n    else:\n        epochs_without_improvement += 1\n    \n    # Early stopping: no improvement\n    if epochs_without_improvement >= PATIENCE:\n        print(f\"\\nEarly stopping at epoch {epoch}: no improvement for {PATIENCE} epochs\")\n        print(f\"Best loss: {best_loss:.6f}\")\n        state = state.replace(params=best_params)\n        break\n    \n    # Compute per-sample losses for pool update\n    per_sample_losses = jnp.mean((outputs[..., :4] - target) ** 2, axis=(1, 2, 3))\n    \n    # Update pool\n    pool.update(indices, outputs, per_sample_losses)\n    \n    elapsed = time.time() - start_time\n    phase1_losses.append(loss_val)\n    phase1_times.append(elapsed)\n    \n    if epoch % config.log_interval == 0:\n        print(f\"Epoch {epoch:4d}: loss = {loss_val:.6f}, best = {best_loss:.6f}, time = {elapsed:.3f}s\")\n\nprint(f\"\\nPhase 1 complete. Final loss: {phase1_losses[-1]:.6f}, Best loss: {best_loss:.6f}\")",
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -605,53 +558,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Phase 2 training\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"PHASE 2: Multi-Formation Transitions\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "# Reset pool with trained states\n",
-    "pool = NCAPool(seed, config.pool_size)\n",
-    "\n",
-    "# Formation names for logging\n",
-    "formation_names = list(targets.keys())\n",
-    "\n",
-    "phase2_losses = []\n",
-    "phase2_formations = []\n",
-    "\n",
-    "for epoch in range(min(PHASE2_EPOCHS, 500)):  # Shorter for demo\n",
-    "    key, subkey1, subkey2, subkey3, subkey4 = jax.random.split(key, 5)\n",
-    "    \n",
-    "    # Random target formation\n",
-    "    target_idx = int(jax.random.randint(subkey1, (), 0, len(formation_names)))\n",
-    "    target = targets[formation_names[target_idx]]\n",
-    "    \n",
-    "    # Sample from pool\n",
-    "    indices, batch = pool.sample(config.batch_size, subkey2)\n",
-    "    \n",
-    "    # Damage augmentation\n",
-    "    if epoch > config.damage_start_epoch:\n",
-    "        batch = pool.apply_damage(batch, config.damage_samples, subkey3)\n",
-    "    \n",
-    "    # Random steps\n",
-    "    num_steps = int(jax.random.randint(subkey4, (), config.min_steps, config.max_steps + 1))\n",
-    "    \n",
-    "    # Train\n",
-    "    state, loss, outputs = train_step(state, batch, target, subkey4, num_steps)\n",
-    "    \n",
-    "    # Update pool\n",
-    "    per_sample_losses = jnp.mean((outputs[..., :4] - target) ** 2, axis=(1, 2, 3))\n",
-    "    pool.update(indices, outputs, per_sample_losses)\n",
-    "    \n",
-    "    phase2_losses.append(float(loss))\n",
-    "    phase2_formations.append(target_idx)\n",
-    "    \n",
-    "    if epoch % config.log_interval == 0:\n",
-    "        print(f\"Epoch {epoch:4d}: loss = {loss:.6f}, target = {formation_names[target_idx]}\")\n",
-    "\n",
-    "print(f\"\\nPhase 2 complete. Final loss: {phase2_losses[-1]:.6f}\")"
-   ]
+   "source": "# Phase 2 training with early stopping\nprint(\"\\n\" + \"=\"*60)\nprint(\"PHASE 2: Multi-Formation Transitions\")\nprint(\"=\"*60)\n\n# Reset pool with trained states\npool = NCAPool(seed, config.pool_size)\n\n# Formation names for logging\nformation_names = list(targets.keys())\n\n# Early stopping config\nPATIENCE = 150\nMIN_DELTA = 1e-6\n\nphase2_losses = []\nphase2_formations = []\nbest_loss = float('inf')\nbest_params = state.params  # Start with Phase 1 best\nepochs_without_improvement = 0\n\nfor epoch in range(PHASE2_EPOCHS):\n    key, subkey1, subkey2, subkey3, subkey4 = jax.random.split(key, 5)\n    \n    # Random target formation\n    target_idx = int(jax.random.randint(subkey1, (), 0, len(formation_names)))\n    target = targets[formation_names[target_idx]]\n    \n    # Sample from pool\n    indices, batch = pool.sample(config.batch_size, subkey2)\n    \n    # Damage augmentation\n    if epoch > config.damage_start_epoch:\n        batch = pool.apply_damage(batch, config.damage_samples, subkey3)\n    \n    # Random steps\n    num_steps = int(jax.random.randint(subkey4, (), config.min_steps, config.max_steps + 1))\n    \n    # Train\n    state, loss, outputs = train_step(state, batch, target, subkey4, num_steps)\n    loss_val = float(loss)\n    \n    # Early stopping: check for NaN\n    if np.isnan(loss_val) or np.isinf(loss_val):\n        print(f\"\\nEarly stopping at epoch {epoch}: loss is {loss_val}\")\n        if best_params is not None:\n            state = state.replace(params=best_params)\n        break\n    \n    # Track best loss\n    if loss_val < best_loss - MIN_DELTA:\n        best_loss = loss_val\n        best_params = state.params\n        epochs_without_improvement = 0\n    else:\n        epochs_without_improvement += 1\n    \n    # Early stopping: no improvement\n    if epochs_without_improvement >= PATIENCE:\n        print(f\"\\nEarly stopping at epoch {epoch}: no improvement for {PATIENCE} epochs\")\n        print(f\"Best loss: {best_loss:.6f}\")\n        state = state.replace(params=best_params)\n        break\n    \n    # Update pool\n    per_sample_losses = jnp.mean((outputs[..., :4] - target) ** 2, axis=(1, 2, 3))\n    pool.update(indices, outputs, per_sample_losses)\n    \n    phase2_losses.append(loss_val)\n    phase2_formations.append(target_idx)\n    \n    if epoch % config.log_interval == 0:\n        print(f\"Epoch {epoch:4d}: loss = {loss_val:.6f}, best = {best_loss:.6f}, target = {formation_names[target_idx]}\")\n\nprint(f\"\\nPhase 2 complete. Final loss: {phase2_losses[-1]:.6f}, Best loss: {best_loss:.6f}\")"
   },
   {
    "cell_type": "markdown",
