fix: Add GPU memory error handling to visualization notebook

--- a/notebooks/03_visualization.ipynb
+++ b/notebooks/03_visualization.ipynb
@@ -3,9 +3,29 @@
   {
    "cell_type": "code",
    "source": "# Setup: Pull latest code and install package with CUDA support\n# Run this cell first. If imports fail, restart kernel and run again.\n\nimport subprocess\nimport sys\nimport os\n\nREPO_URL = \"https://github.com/JackHopkins/FormationHNCA.git\"\n\n# Detect environment and set repo path\nif os.path.exists(\"/content\"):  # Google Colab\n    REPO_DIR = \"/content/FormationHNCA\"\nelif os.path.exists(\"/workspace\"):  # Lambda Labs / similar\n    REPO_DIR = \"/workspace/FormationHNCA\"\nelse:\n    REPO_DIR = os.path.expanduser(\"~/FormationHNCA\")\n\n# Clone or pull latest\nif os.path.exists(REPO_DIR):\n    print(f\"Pulling latest changes in {REPO_DIR}...\")\n    result = subprocess.run([\"git\", \"-C\", REPO_DIR, \"pull\"], capture_output=True, text=True)\n    print(result.stdout or \"Already up to date.\")\nelse:\n    print(f\"Cloning repository to {REPO_DIR}...\")\n    subprocess.run([\"git\", \"clone\", REPO_URL, REPO_DIR], check=True)\n\nos.chdir(REPO_DIR)\n\n# Install JAX with CUDA support (for H100/GPU)\nprint(\"Installing JAX with CUDA support...\")\nsubprocess.run([\n    sys.executable, \"-m\", \"pip\", \"install\", \"-q\",\n    \"jax[cuda12]\"\n], check=True)\n\n# Install package\nprint(\"Installing battle-nca package...\")\nsubprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"-e\", \".\"], check=True)\n\n# Add src to path as fallback\nsrc_path = os.path.join(REPO_DIR, \"src\")\nif src_path not in sys.path:\n    sys.path.insert(0, src_path)\n\nprint(f\"\\nWorking directory: {os.getcwd()}\")\nprint(\"Setup complete!\")",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T17:06:55.257231Z",
+     "start_time": "2026-01-18T17:06:50.718359Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pulling latest changes in /workspace/FormationHNCA...\n",
+      "Already up to date.\n",
+      "\n",
+      "Installing JAX with CUDA support...\n",
+      "Installing battle-nca package...\n",
+      "\n",
+      "Working directory: /workspace/FormationHNCA\n",
+      "Setup complete!\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -22,10 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-18T17:06:57.089485Z",
+     "start_time": "2026-01-18T17:06:55.345113Z"
+    }
+   },
+   "source": "# Core imports\nimport os\nimport sys\nsys.path.insert(0, 'src')\n\n# Set JAX to use CPU if GPU is unavailable/out of memory\n# Remove this line if you want GPU and have shut down other notebooks\n# os.environ['JAX_PLATFORMS'] = 'cpu'\n\nimport jax\nimport jax.numpy as jnp\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport matplotlib.animation as animation\nfrom matplotlib.colors import LinearSegmentedColormap\nfrom IPython.display import HTML, display\nimport pickle\nfrom pathlib import Path\n\n# Battle NCA imports\nfrom battle_nca.hierarchy import ChildNCA, HierarchicalNCA\nfrom battle_nca.hierarchy.child_nca import create_army_seed, CHILD_CHANNELS\nfrom battle_nca.hierarchy.hnca import create_battle_scenario, BattleSimulator\nfrom battle_nca.combat import FormationTargets\nfrom battle_nca.utils.visualization import (\n    render_state,\n    render_battle,\n    create_animation,\n    create_battle_animation,\n    visualize_channels,\n    plot_training_curves\n)\n\n# Enable inline animations\nplt.rcParams['animation.html'] = 'jshtml'\n\ntry:\n    devices = jax.devices()\n    print(f\"JAX devices: {devices}\")\n    if devices[0].platform == 'gpu':\n        print(\"GPU acceleration enabled!\")\n    else:\n        print(\"Running on CPU\")\nexcept RuntimeError as e:\n    if \"out of memory\" in str(e).lower() or \"CUDA\" in str(e):\n        print(\"GPU out of memory! Please shut down other notebook kernels first.\")\n        print(\"Or uncomment 'os.environ[\\\"JAX_PLATFORMS\\\"] = \\\"cpu\\\"' above to use CPU.\")\n        raise\n    raise",
    "outputs": [],
-   "source": "# Core imports\nimport sys\nsys.path.insert(0, 'src')\n\nimport jax\nimport jax.numpy as jnp\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport matplotlib.animation as animation\nfrom matplotlib.colors import LinearSegmentedColormap\nfrom IPython.display import HTML, display\nimport pickle\nfrom pathlib import Path\n\n# Battle NCA imports\nfrom battle_nca.hierarchy import ChildNCA, HierarchicalNCA\nfrom battle_nca.hierarchy.child_nca import create_army_seed, CHILD_CHANNELS\nfrom battle_nca.hierarchy.hnca import create_battle_scenario, BattleSimulator\nfrom battle_nca.combat import FormationTargets\nfrom battle_nca.utils.visualization import (\n    render_state,\n    render_battle,\n    create_animation,\n    create_battle_animation,\n    visualize_channels,\n    plot_training_curves\n)\n\n# Enable inline animations\nplt.rcParams['animation.html'] = 'jshtml'\n\nprint(f\"JAX devices: {jax.devices()}\")"
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
